5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1577_1334.log
== TEST (2019-03-16 10:44:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16//2)

print("Resto: ", )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:52:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16//2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:52:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16//2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.237577
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:52:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16//2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:53:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16//2)

print("Resto: ", 30%11)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.174391
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:53:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:53:47) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.138067
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:54:55) 
-- CODE:
print(5 + 3)

print(10 - 2)

print(4 * 2)

print(16 // 2)

print (30 % 11)

print(2 ** 3)
-- OUTPUT:
8
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:54:57) 
-- CODE:
print(5 + 3)

print(10 - 2)

print(4 * 2)

print(16 // 2)

print (30 % 11)

print(2 ** 3)
-- EXECUTION TIME:
0.143595
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:55:11) 
-- CODE:
print(5 + 3)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- OUTPUT:
8
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:55:34) 
-- CODE:
print(5 + 3)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- EXECUTION TIME:
0.191842
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:56:00) 
-- CODE:
print(4+4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- EXECUTION TIME:
0.142023
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:56:01) 
-- CODE:
print(4+4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- EXECUTION TIME:
0.116752
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:56:05) 
-- CODE:
print(4+4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- OUTPUT:
8
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:56:20) 
-- CODE:
print( 4 + 4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- OUTPUT:
8
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:56:22) 
-- CODE:
print( 4 + 4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- EXECUTION TIME:
0.179746
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
8
8
8
8
8
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:58:33) 
-- CODE:
print( 4 + 4)
print(10 - 2)
print(4 * 2)
print(16 // 2)
print (30 % 11)
print(2 ** 3)
-- OUTPUT:
8
8
8
8
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:00:55) 
-- CODE:
print("Adicao",4 + 4)
print"Subtracao"(10 - 2)
print("Multiplicacao"4 * 2)
print("Divisão"16 // 2)
print ("Resto"30 % 11)
print("Potenciacao"2 ** 3)
-- ERROR:
File "XXXX", line 2
    print"Subtracao"(10 - 2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:01:07) 
-- CODE:
print("Adicao",4 + 4)
print("Subtracao"(10 - 2)
print("Multiplicacao"4 * 2)
print("Divisão"16 // 2)
print ("Resto"30 % 11)
print("Potenciacao"2 ** 3)
-- ERROR:
File "XXXX", line 3
    print("Multiplicacao"4 * 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:01:30) 
-- CODE:
print("Adicao",4 + 4)
print("Subtracao",10 - 2)
print("Multiplicacao",4 * 2)
print("Divisão",16 // 2)
print ("Resto",30 % 11)
print("Potenciacao",2 ** 3)
-- OUTPUT:
Adicao 8
Subtracao 8
Multiplicacao 8
Divisão 8
Resto 8
Potenciacao 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:02:04) 
-- CODE:
print("Adicao:",4 + 4)
print("Subtracao:",10 - 2)
print("Multiplicacao:",4 * 2)
print("Divisão:",16 // 2)
print ("Resto:",30 % 11)
print("Potenciacao:",2 ** 3)
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisão: 8
Resto: 8
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:02:33) 
-- CODE:
print("Adicao:", 4 + 4)
print("Subtracao:", 10 - 2)
print("Multiplicacao:", 4 * 2)
print("Divisão:", 16 // 2)
print ("Resto:", 30 % 11)
print("Potenciacao:", 2 ** 3)
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisão: 8
Resto: 8
Potenciacao: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:02:50) 
-- CODE:
print("Adicao: ", 4 + 4)
print("Subtracao: ", 10 - 2)
print("Multiplicacao: ", 4 * 2)
print("Divisão: ", 16 // 2)
print ("Resto: ", 30 % 11)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisão:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:03:16) 
-- CODE:
print("Adicao: ", 4 + 4)
print("Subtracao: ", 10 - 2)
print("Multiplicacao: ", 4 * 2)
print("Divisão: ", 16 // 2)
print("Resto: ", 30 % 11)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisão:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:03:33) 
-- CODE:
print("Adicao: ", 4 + 4)
print("Subtracao: ", 10 - 2)
print("Multiplicacao: ", 4 * 2)
print("Divisao: ", 16 // 2)
print("Resto: ", 30 % 11)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:03:35) 
-- CODE:
print("Adicao: ", 4 + 4)
print("Subtracao: ", 10 - 2)
print("Multiplicacao: ", 4 * 2)
print("Divisao: ", 16 // 2)
print("Resto: ", 30 % 11)
print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.160005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:04:15) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:04:20) 
-- CODE:
print("Adicao: ", 4 + 4)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.189965
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:05:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:05:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.1997
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:06:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:26:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.127441
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:28:22) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Adicao:", 4+4)
print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Adicao: 8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:28:27) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Adicao:", 4+4)
print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.1419
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Adicao: 8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 11:37:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 11:37:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 30 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.123983
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
